Orchestrator/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hivemind
  labels:
    app.kubernetes.io/name: hivemind
    kubernetes.io/metadata.name: hivemind
