Orchestrator/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  selector:
    app: orchestrator
  ports:
    - port: 8080
      targetPort: 8080
      name: http
